<resources>
    <string name="network_error">网络异常，请重试</string>
    <string name="network_exception">网络异常，请检查网络连接!</string>
    <string name="data_exception">数据异常，请稍后重试</string>
    <string name="app_name">格格</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">正在加载,请稍等...</string>
    <string name="retry">重试</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="repeat_quit_confirm">再按一次退出程序</string>
    <string name="webuseragent">gege/%1$s (Linux; Android %2$s)</string>
    <string name="select_album">选择相册</string>
    <string name="general_tips">温馨提示</string>
    <string name="general_confirm">确定</string>
    <string name="general_cancel">取消</string>
    <string name="image_text">[图片]</string>
    <string name="load_empty">暂无数据，下拉刷新试试</string>
    <string name="load_empty_retry">暂无数据，请稍后再试</string>
    <string name="load_failed">加载失败，请下拉重新加载</string>
    <string name="load_failed_retry">加载失败，请稍后再试</string>
    <string name="no_network">网络连接不可用，请稍后再试</string>
    <string name="no_more_data">没有数据了哦~</string>
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">
        "为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"
    </string>
    <string name="Ensure">"确定"</string>
    <string name="Cancel">"取消"</string>
    <string name="Paying">"正在支付"</string>
    <string name="info">"提示"</string>
    <string name="pay_failed">"支付失败，原因:"</string>
    <string name="common_mon">周一</string>
    <string name="common_tus">周二</string>
    <string name="common_wed">周三</string>
    <string name="common_thu">周四</string>
    <string name="common_fri">周五</string>
    <string name="common_sat">周六</string>
    <string name="common_sun">周日</string>
    <string name="back_to_today">回今天</string>
    <string name="today_str">今天</string>
    <string name="hour_of">%s时</string>
    <string name="minute_of">%s分</string>
    <string name="date_time_ctrl_format_str" formatted="false">%1$s%2$s日 %3$s
    </string>
    <string name="today">今天</string>
    <string name="login">登录</string>
    <string name="login_ing">正在登录&#046;&#046;&#046;</string>
    <string name="phone_number">手机号码</string>
    <string name="input_check_code">输入验证码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="retry_get_checkcode">重新获取</string>
    <string name="agree_protocol">登录视为同意</string>
    <string name="gege_protocol">《格格生活圈使用协议》</string>
    <string name="send_checkcode_success">验证码已发送</string>
    <string name="send_voice_code_success">语音验证码已发送</string>
    <string name="mobile_empty">请输入手机号码</string>
    <string name="mobile_format_error">请输入正确的手机号码</string>
    <string name="checkcode_empty">请输入验证码</string>
    <string name="register_header">完善资料</string>
    <string name="next">下一步</string>
    <string name="avatar">头像</string>
    <string name="edit_avatar">修改头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="job">
        <Data>
            <![CDATA[ <font color="#666666">职业</font><font color="#d8d8d8">(选填)</font> ]]></Data>
    </string>
    <string name="hobby">
        <Data>
            <![CDATA[ <font color="#666666">爱好</font><font color="#d8d8d8">(选填)</font> ]]></Data>
    </string>
    <string name="please_select_avatar">请选择头像</string>
    <string name="please_select_community">请选择小区</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="select_avatar">头像选择</string>
    <string name="take_picture">拍照</string>
    <string name="album">相册</string>
    <string name="user_info">个人资料</string>
    <string name="edit_success">已修改~</string>
    <string name="select_community">选择小区</string>
    <string name="input_community">请输入小区名称</string>
    <string name="located_community">定位到的小区</string>
    <string name="nanjing">南京</string>
    <string name="board_recomment">圈子推荐</string>
    <string name="finish">完成</string>
    <string name="join_board">加入</string>
    <string name="have_join_board">已加入</string>
    <string name="lifezone">生活圈</string>
    <string name="message">消息</string>
    <string name="localservice">新鲜事</string>
    <string name="warehouse">格格云店</string>
    <string name="me">我</string>
    <string name="delivery">快递</string>
    <string name="lifezone_title">格格生活圈</string>
    <string name="points">格格币 : %1$s</string>
    <string name="friends_neighbours">好友/邻居 : %1$d/%2$d</string>
    <string name="my_lifezones">加入的圈子</string>
    <string name="near_lifezones">附近的生活圈</string>
    <string name="change_lifezones">换一批</string>
    <string name="more_lifezones">加入更多生活圈</string>
    <string name="join">加入</string>
    <string name="hot">热门</string>
    <string name="latest">最新</string>
    <string name="keywords">请输入关键字</string>
    <string name="km">%skm</string>
    <string name="owner">业主</string>
    <string name="member">会员</string>
    <string name="member_count">小区人数 : %1$d</string>
    <string name="service_content"><Data>
        <![CDATA[ <font color="#000000">%1$s : </font> ]]></Data>%2$s
    </string>
    <string name="quit_board_confirm">您确定退出该圈子吗？</string>
    <string name="keyword_not_empty">关键字不能为空</string>
    <string name="no_data">查询无数据，请试试其他关键字~</string>
    <string name="support_count">支持 : %d次</string>
    <string name="support">支持</string>
    <string name="support_success">已支持~</string>
    <string name="topic_title">最新</string>
    <string name="registration">签到</string>
    <string name="have_registration">已签到</string>
    <string name="label">标签</string>
    <string name="old_new">新旧</string>
    <string name="now_price">现价</string>
    <string name="delimiter">:</string>
    <string name="favorite">收藏</string>
    <string name="private_msg">私信</string>
    <string name="toped">置顶</string>
    <string name="join_board_success">恭喜，成功加入圈子~</string>
    <string name="reply">回复</string>
    <string name="floor">楼</string>
    <string name="etc">等</string>
    <string name="like_unit_desc">人赞过</string>
    <string name="apply_unit_desc">人报名</string>
    <string name="to_apply">我要报名</string>
    <string name="apply">报名</string>
    <string name="have_apply">已报名</string>
    <string name="cancel_apply">取消报名</string>
    <string name="reply_topic">回复帖子:</string>
    <string name="reply_floor">回复%d楼:</string>
    <string name="reply_success">回复成功~</string>
    <string name="down_sort">倒序</string>
    <string name="up_sort">升序</string>
    <string name="report">举报</string>
    <string name="delete_topic">删帖</string>
    <string name="delete_topic2">删除帖子</string>
    <string name="delete_goods">删除商品</string>
    <string name="favorite_success">已收藏~</string>
    <string name="report_success">已举报~</string>
    <string name="delete_reply_confirm">您确认删除这条回复吗？</string>
    <string name="delete_success">已删除~</string>
    <string name="delete_topic_confirm">您确认要删除吗？</string>
    <string name="apply_success">已报名~</string>
    <string name="cancel_apply_success">已取消报名~</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="photo_indicator">%1$d/%2$d</string>
    <string name="save_fail">保存失败</string>
    <string name="save_success">图片成功保存到：%s</string>
    <string name="load_photo_fail">加载图片失败</string>
    <string name="topic">话题</string>
    <string name="business">交易</string>
    <string name="publish">发布</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="requirement">需求</string>
    <string name="start_address">起点</string>
    <string name="end_address">终点</string>
    <string name="start_time">出发时间</string>
    <string name="find_car">找车主</string>
    <string name="find_passenger">找乘客</string>
    <string name="select_time">选择时间</string>
    <string name="activity_name">活动名称</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="address">地点</string>
    <string name="marriage">征婚</string>
    <string name="dating">交友</string>
    <string name="age">年龄</string>
    <string name="job2">职业</string>
    <string name="adoption">领养</string>
    <string name="dating2">约会</string>
    <string name="variety">品种</string>
    <string name="male">公</string>
    <string name="female">母</string>
    <string name="buy">求购</string>
    <string name="sell">转让</string>
    <string name="category">分类</string>
    <string name="condition">新旧程度</string>
    <string name="old_price">原价</string>
    <string name="new_price">转让价</string>
    <string name="rent_house2">找房子</string>
    <string name="lease_house">找租客</string>
    <string name="community">小区</string>
    <string name="house_type">户型</string>
    <string name="rent_money">租金</string>
    <string name="fitness">健身</string>
    <string name="play">玩</string>
    <string name="time">时间</string>
    <string name="indoor">室内</string>
    <string name="outdoor">室外</string>
    <string name="room">室</string>
    <string name="hall">厅</string>
    <string name="washroom">卫</string>
    <string name="please_input_activityname">请输入活动名称</string>
    <string name="please_input_address">请输入地址</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_input_content">请输入内容</string>
    <string name="please_input_start_address">请输入起点</string>
    <string name="please_input_end_address">请输入终点</string>
    <string name="please_input_start_time">请选择出发时间</string>
    <string name="please_input_age">请输入年龄</string>
    <string name="please_input_job">请输入职业</string>
    <string name="please_input_variety">请输入品种</string>
    <string name="please_input_category">请输入分类</string>
    <string name="please_input_condition">请输入新旧程度</string>
    <string name="please_input_oldprice">请输入原价</string>
    <string name="please_input_newprice">请输入转让价</string>
    <string name="please_input_community">请输入小区</string>
    <string name="please_input_housetype">请输入户型</string>
    <string name="please_input_rentmoney">请输入租金</string>
    <string name="sending_topic">正在发送&#046;&#046;&#046;</string>
    <string name="send_topic_success">已发送</string>
    <string name="send_topic_failed">发送失败</string>
    <string name="chat">聊天</string>
    <string name="send">发送</string>
    <string name="chat_setting">对话设置</string>
    <string name="notify_new_message">新消息通知</string>
    <string name="clear_chat_record">清空聊天记录</string>
    <string name="complain">投诉</string>
    <string name="contacts">通讯录</string>
    <string name="my_friend">我的好友(%d)</string>
    <string name="my_neighbor">邻居(%d)</string>
    <string name="friend_notify">好友相关</string>
    <string name="system_notify">系统通知</string>
    <string name="related_notify">与我相关</string>
    <string name="apply_friend">%s请求加您为好友</string>
    <string name="self_accept_friend">您已愉快的接受了%s的好友请求</string>
    <string name="self_refuse_friend">您已残忍的拒绝了%s的请求</string>
    <string name="accept_friend">%s愉快的接受了您的好友请求</string>
    <string name="refuse_friend">%s残忍的拒绝了您的好友请求</string>
    <string name="agree">同意</string>
    <string name="have_deal">已处理</string>
    <string name="no_news">还没有新消息哦~</string>
    <string name="general_notify_title">格格小秘书</string>
    <string name="total_unread_msg">您有%1$d条消息未读</string>
    <string name="friend_msg_title">好友消息</string>
    <string name="delete_message_confirm">您确认删除%1$s吗？</string>
    <string name="disconnect_server">已断开链接，请稍后再试</string>
    <string name="upload_failed">上传失败</string>
    <string name="category_info">分类信息</string>
    <string name="scan_twodimension_code">扫一扫</string>
    <string name="activity">活动</string>
    <string name="convenience_service">便民服务</string>
    <string name="tv_order_num">运单编号: %1$s</string>
    <string name="tv_box_num">箱门编号: %1$s</string>
    <string name="tv_delivery_time">投递时间: %1$s</string>
    <string name="btn_click_open_door">点此开门</string>
</resources>