<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_order_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/tv_order_num"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_box_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/tv_box_num"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_delivery_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/tv_delivery_time"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_open"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_btn_red"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/btn_click_open_door"
        android:textSize="16dp" />


</RelativeLayout>