<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout 
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content" 
  		android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="55dp"
    	android:paddingLeft="10dp"
		android:paddingRight="10dp"
    	android:gravity="center_vertical"
    	android:orientation="horizontal">
    	
        <TextView
            android:layout_width="80dp"
    		android:layout_height="wrap_content"
    		android:layout_gravity="left|center_vertical"
    		android:text="@string/requirement" 
    		style="@style/text_publish_title"/>
        
        
        <RadioGroup
               android:id="@+id/tabs_rg"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/marriageBtn"
		      	     android:layout_width="75dp"
	      	    	android:layout_height="30dp"
		      	    android:gravity="center"
		      	    android:background="@drawable/bg_btn_require"
		      	    android:text="@string/marriage"
		      	    android:textColor="@drawable/service_button_color"
                    android:button="@null"
                    android:checked="true"
                    style="@style/text_white_16"
                    android:singleLine="true"/>

                <RadioButton
                    android:id="@+id/datingBtn"
		      	    android:layout_width="75dp"
	      	    	android:layout_height="30dp"
	      	    	android:layout_marginLeft="25dp"
		      	    android:gravity="center"
		      	    android:background="@drawable/bg_btn_require"
		      	    android:text="@string/dating"
		      	    android:textColor="@drawable/service_button_color"
		      	    style="@style/text_white_16"
                    android:singleLine="true"
                    android:button="@null"/>
                </RadioGroup>
    		
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"/>
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="55dp"
    	android:paddingLeft="10dp"
		android:paddingRight="10dp"
    	android:gravity="center_vertical"
    	android:orientation="horizontal">
    	
        <TextView
            android:layout_width="100dp"
    		android:layout_height="wrap_content"
    		android:layout_gravity="left|center_vertical"
    		android:text="@string/gender" 
    		style="@style/text_publish_title"/>
    
    	<RadioGroup 
      	    android:id="@+id/gender_group" 
      	    android:layout_width="wrap_content"
			android:layout_height="wrap_content"  
			android:orientation="horizontal">
                
      		<RadioButton
      		    android:id="@+id/manBtn" 
      		    android:layout_width="75dp"
				android:layout_height="wrap_content" 
		        android:text="@string/man" 
		        style="@style/text_register_checkbox"
		        android:button="@null" 
		        android:background="@android:color/transparent"
				android:drawableLeft="@drawable/common_radio"
				android:drawablePadding="10dp"
		        android:checked="true"/>
      		
			<RadioButton
			    android:id="@+id/womanBtn" 
			    android:layout_width="75dp"
		        android:layout_height="wrap_content" 
		        android:layout_marginLeft="25dp"
		        android:text="@string/woman" 
		        style="@style/text_register_checkbox"
		        android:button="@null" 
		        android:background="@android:color/transparent"
				android:drawableLeft="@drawable/common_radio"
				android:drawablePadding="10dp"/>
		</RadioGroup>
   </LinearLayout>
   
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:background="@color/line_color"/>
   
   	<EditText
           android:id="@+id/ageEdit"
           android:layout_width="match_parent"
           android:layout_height="55dp"
           android:paddingLeft="10dp"
		   android:paddingRight="10dp"
           style="@style/text_publish_title"
           android:hint="@string/age" 
           android:inputType="number"/>
   	
   	<View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:background="@color/line_color"/>
    
  	<EditText
          android:id="@+id/jobEdit"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:paddingLeft="10dp"
		  android:paddingRight="10dp"
          style="@style/text_publish_title"
          android:hint="@string/job2" />
        
  	<View 
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/line_color"/>
   
   
   <EditText
        android:id="@+id/titleEdit"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="10dp"
  		android:paddingRight="10dp"
        style="@style/text_publish_title" 
        android:hint="@string/title" />
        
  <View 
       android:layout_width="match_parent"
       android:layout_height="0.5dp"
       android:paddingLeft="10dp"
       android:background="@color/line_color"/>
    	
  <com.moge.gege.util.widget.chat.EmoticonEditText
	    android:id="@+id/contentEdit"
	    android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:paddingTop="10dp"
	    android:paddingLeft="10dp"
  		android:paddingRight="10dp"
	    android:gravity="top"
	    android:hint="@string/content"
	    style="@style/text_publish_content" />
    
    </LinearLayout>

</ScrollView>
